Updated code considerations

--- a/propername.yaml
+++ b/propername.yaml
@@ -2,10 +2,11 @@ ProperName:
   # This is a format to accurately define a person's current name  for use in digital systems.
   # Any field can accept more than one entry (for recognition's sake), where the
   # first entry is the preferred option to use in the interface.
+  # Ideally this would be a single definition by the user that can be imported so they don't need to re-enter it.
 
 - name:
    personal-use: []
-   # individual name for common use. Example: "Hi, personal_use!"
+   # individual name for common use (preferred name). Example: "Hi, personal_use!"
    personal-document: []
    # individual name for document/system use, if different than personal-use name
 
